[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "EMS"
version = "0.0.15"
authors = [
    {name = "Andrew W. Donoho", email = "github@store.ddg.com"}
]
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "google-auth",
    "pandas-gbq >=0.19.2",
    "sqlalchemy >2.0.0",
    "cloud-sql-python-connector",
    "pg8000",
    "dask"
]
